<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LLstyle"
    android:background="@drawable/hotel"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/loginActivity_tv_username"
            style="@style/LOGTVstyle"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abhaya_libre"
            android:shadowColor="@color/black"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/loginActivity_et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backtextview"
            android:drawableStart="@drawable/ic_person"
            android:fontFamily="@font/abhaya_libre"
            android:hint="Enter the user name:"
            android:inputType="textPersonName"
            android:nextFocusDown="@+id/loginActivity_et_password"
            android:padding="20dp"
            android:singleLine="true"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/loginActivity_tv_password"
            style="@style/LOGTVstyle"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abhaya_libre"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/loginActivity_et_password"
            style="@style/LOGETstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/backtextview"
            android:drawableStart="@drawable/ic_lock"
            android:fontFamily="@font/abhaya_libre"
            android:hint="Enter the password:"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textAlignment="center" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/loginActivity_cb_remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:buttonTint="@color/black"
        android:fontFamily="@font/abhaya_libre"
        android:text="@string/remember_me"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <Button

        style="@style/Bstyle"
        android:layout_marginTop="30dp"
        android:background="@drawable/backbtn"
        android:drawableLeft="@drawable/baseline_login_24"
        android:onClick="Login"
        android:padding="20dp"
        android:text="@string/login"
        app:cornerRadius="90dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/abhaya_libre"
        android:text="@string/noAccount"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        style="@style/Bstyle"
        android:layout_marginTop="20dp"
        android:background="@drawable/backbtn"
        android:drawableLeft="@drawable/baseline_assignment_24"
        android:onClick="SignUp"
        android:padding="20dp"
        android:text="@string/signup"
        app:cornerRadius="90dp" />

    <ProgressBar
        android:id="@+id/loginActivity_pb_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />


</LinearLayout>