<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backtextview"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abhaya_libre"
                android:text="@string/order_type"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/orderActivity_tv_roomID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abhaya_libre"
                android:text="@string/room_id"
                android:textAlignment="center"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/orderActivity_tv_orderType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/abhaya_libre"
                android:gravity="top"
                android:text="@string/order_type"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/orderActivity_tv_orderDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abhaya_libre"
                android:padding="5dp"
                android:text="@string/order_description"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/orderActivity_btn_orderDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backbtn"
            android:text="@string/done" />
    </LinearLayout>


</androidx.cardview.widget.CardView>