<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LLstyle"
    android:background="@drawable/hotel"
    tools:context=".ReceptionistActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/SVstyle"
            android:background="@drawable/backtextview">

            <Button
                android:id="@+id/receptionistActivity_btn_suiteRoom"
                style="@style/Bstyle"
                android:background="@drawable/backbtn"
                android:fontFamily="@font/abhaya_libre"
                android:onClick="SuiteRoom"
                android:text="@string/suite"
                android:textStyle="bold"
                app:cornerRadius="90dp" />

            <Button
                android:id="@+id/receptionistActivity_btn_normalRoom"
                style="@style/Bstyle"
                android:background="@drawable/backbtn"
                android:fontFamily="@font/abhaya_libre"
                android:onClick="NormalRoom"
                android:text="@string/room"
                android:textStyle="bold"
                app:cornerRadius="90dp" />

            <Button
                android:id="@+id/receptionistActivity_btn_orders"
                style="@style/Bstyle"
                android:layout_marginBottom="80dp"
                android:background="@drawable/backbtn"
                android:fontFamily="@font/abhaya_libre"
                android:onClick="Orders"
                android:text="@string/order"
                android:textStyle="bold"
                app:cornerRadius="90dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>