<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LLstyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hotel"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".CurrencyConverterApiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/LOGTVstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/abhaya_libre"
            android:text="@string/convert_from"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            style="@style/LOGTVstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/abhaya_libre"
            android:text="@string/convert_to"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/currencyConverterApiActivity_tv_convertFrom"
            style="@style/LOGTVstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/abhaya_libre"
            android:hint="@string/select_country"
            android:onClick="CurrencyFrom"
            android:textColor="@color/purple_500"
            android:textColorHint="#BFA6A6"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/currencyConverterApiActivity_tv_convertTo"
            style="@style/LOGTVstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/abhaya_libre"
            android:hint="@string/select_country"
            android:onClick="CurrencyTo"
            android:textColor="@color/purple_500"
            android:textColorHint="#CAB2B2"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/LOGTVstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/abhaya_libre"
            android:text="@string/amount_to_convert"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            style="@style/LOGTVstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/abhaya_libre"
            android:text="@string/conversation_rate"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/currencyConverterApiActivity_et_amountConvert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/abhaya_libre"
            android:inputType="number"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/currencyConverterApiActivity_tv_convertRate"
            style="@style/LOGTVstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/abhaya_libre"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!--    <Button-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/convert"-->
    <!--        android:onClick="Convert"/>-->

</LinearLayout>